<resources>
    <string name="app_name">Alojamientos en Asturias</string>
    <string name="title_activity_maps" translatable="false">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="housing">Casas</string>
    <string name="apartments">Apartamentos</string>
    <string name="hotels">Hoteles</string>
    <string name="households">Viviendas</string>
    <string name="shelters">Albergues/Refugios</string>
    <string name="campings">Campings</string>
    <string name="hostels">Hostales/Pensiones</string>
    <string name="filtros">Filtros</string>
    <string name="global_map">Mapa Global</string>
    <string name="favs">Favoritos</string>
    <string name="configuration">Configuración</string>
    <string name="grid">Cuadrícula</string>
    <string name="list">Lista</string>
    <string name="card_list">Lista de Tarjetas</string>
    <string name="change_look">Cambiar vista</string>
    <string name="description">DESCRIPCIÓN</string>
    <string name="general_information">INFORMACIÓN GENERAL</string>
    <string name="places">Plazas:</string>
    <string name="fixed_places">Plazas Fijas:</string>
    <string name="pitches">Parcelas:</string>
    <string name="time_open">Abierto todo el año:</string>
    <string name="closing_dates">Fechas de cierre:</string>
    <string name="prices">TARIFAS</string>
    <string name="contact">CONTACTO</string>
    <string name="directions">Dirección</string>
    <string name="telephone">Teléfono</string>
    <string name="email">Email</string>
    <string name="social_networks">Redes Sociales</string>
    <string name="adult">Adulto:</string>
    <string name="ubicacion">UBICACIÓN</string>
    <string name="services">SERVICIOS</string>
    <string name="camping_services">Servicios del camping:</string>
    <string name="health_security">Seguridad y Sanidad:</string>
    <string name="complementary_services">Servicios Complementarios</string>
    <string name="extra_seats">Plazas Supletorias</string>
    <string name="peak_season">Temporada Alta:</string>
    <string name="mid_season">Temporada Media:</string>
    <string name="low_season">Temporada Baja:</string>
    <string name="general_services">Servicios Generales</string>
    <string name="room_services">Servicios Habitación</string>
    <string name="children">Niño/a:</string>
    <string name="individual_tent">Tienda Individual:</string>
    <string name="car">Coche:</string>
    <string name="motorcycle">Moto:</string>
    <string name="coach">Autocar:</string>
    <string name="family_tent">Tienda Familiar:</string>
    <string name="van">Caravana:</string>
    <string name="camper">Autocaravana</string>
    <string name="bungalow">Bungalow:</string>
    <string name="filters">Filtros</string>
    <string name="about">Acerca de...</string>
    <string name="about_fragment">Alojamientos en Asturias es una App gratuita desarrollada por Nahuel Costa Cortez. \n\n La información ha sido proporcionada por el catálogo de datos del Principado de Asturias. \n\n Disponible: </string>
    <string name="turism_web" translatable="false">https://www.turismoasturias.es/open-data</string>
    <string name="personal_preferences">Configuración</string>
    <string name="update_frequency">Frecuencia de actualización</string>
    <string name="update_frequency_text">Frecuencia con la que se actualizarán los datos que se disponen sobre alojamientos en Asturias.</string>
    <string name="night_mode">Modo noche</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatica</string>
    <string name="update_mode">Actualización manual</string>
    <string name="minutes">minutos</string>
    <string name="hour">1 hora</string>
    <string name="asturias_west">Occidente de Asturias</string>
    <string name="asturias_east">Oriente de Asturias</string>
    <string name="asturias_center">Centro de Asturias</string>
    <string name="aceptar">Aceptar</string>
    <string name="ubication_lower_case">Ubicación</string>
    <string name="water_van">Agua y desagüe caravanas</string>
    <string name="internet_acces">Acceso a Internet</string>
    <string name="laundry_service">Servicio de lavanderia</string>
    <string name="supermarket">Supermercado</string>
    <string name="cafeteria">Cafetería</string>
    <string name="yes">Sí</string>
    <string name="clean">Limpiar</string>
    <string name="Any">Cualquiera</string>
    <string name="parking">Aparcamiento</string>
    <string name="wifi">Wifi</string>
    <string name="fireplace">Chimenea</string>
    <string name="heater">Calefacción</string>
    <string name="washing_machine">Lavadora</string>
    <string name="kitchen">Cocina</string>
    <string name="dishwasher">Lavavajillas</string>
    <string name="cleaning">Servicio de limpieza</string>
    <string name="breakfast">Desayuno Incluido</string>
    <string name="price_per_night">Precio por noche max:</string>
    <string name="no_favourites">Aún no tienes ningún favorito</string>
    <string name="linen">Sábanas incluidas</string>
    <string name="renting_type">Tipo de alquiler</string>
    <string name="no_alojamientos">No existen alojamientos que cumplan sus criterios de búsqueda</string>
    <string name="num_rooms">Nº Habitaciones</string>
    <string name="services_only">Servicios Básicos</string>
    <string name="q_quality">Q de Calidad:</string>
    <string name="stars">Estrellas (mínimo):</string>
    <string name="air_conditioner">Aire acondicionado</string>
    <string name="pool">Piscina</string>
    <string name="hair_dryer">Secador</string>
    <string name="safe_box">Caja fuerte</string>
    <string name="restaurant">Restaurante</string>
    <string name="type">Tipo</string>
    <string name="hostel">Albergue</string>
    <string name="shelter">Refugio</string>
    <string name="cancel">Cancelar</string>
    <string name="attention">Atención</string>
    <string name="message_theme">Este cambio afecta al aspecto general de la aplicación. ¿Desea continuar?</string>
    <string name="language">Idioma</string>
    <string name="current_language">Español</string>
    <string name="sync">Sincronizar</string>
    <string name="synchronize">Iniciando sincronización</string>
    <string name="completed_sync">Sincronización Completada</string>
    <string name="message_redirect">Para efectuar los cambios se le redigirá a la pantalla de inicio</string>
    <string name="loading">Cargando Información</string>
    <string name="no_internet">No hay conexión a Internet</string>
    <string name="retry">Volver  a intentar</string>
    <string name="board">Pensión</string>
    <string name="hostal">Hostal</string>
    <string name="search_by">Buscar por</string>
    <string name="name">Nombre</string>
    <string name="location">Localidad</string>
    <string name="error_network">Error de red</string>
    <string name="search_by_name">Buscar por nombre...</string>
    <string name="search_by_location">Buscar por localidad</string>
    <string name="search_by_ubication">Buscar por zona...</string>
    <string name="see_map">Ver en mapa</string>
    <string name="zone">Zona</string>
    <string name="alphabetically">Alfabéticamente</string>
    <string name="by_zone">Por zona</string>
    <string name="by_location">Por localidad</string>
    <string name="version_error">Su versión del operativo no le permite configurar esta opción</string>
    <string name="order_by">Ordenar por</string>
    <string name="connection_lost">La conexión se ha perdido, por favor revise su conexión a Internet.</string>
    <string name="restaurar">Restaurar valores predeterminados</string>
    <string name="r_u_sure">¿Está seguro de realizar los siguiente cambios?</string>
</resources>
