<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search_item"
        android:title=""
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/options_filters"
        android:title=""
        android:icon="@drawable/icono_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/options_map"
        android:title=""
        android:icon="@drawable/icono_localizacion_menu"
        app:showAsAction="always" />


    <item
        android:id="@+id/options_search_by"
        android:title="@string/search_by"
        app:showAsAction="never" />

    <item
        android:id="@+id/options_order_by"
        android:title="@string/order_by"
        app:showAsAction="never" />

    <item
        android:id="@+id/options_view"
        android:title="@string/change_look"
        app:showAsAction="never" />
</menu>